updated the gradle "runApp" task to support Java 11+